# TiraLabra

./: .coverage  .coveragerc  .pylintrc  README.md  maarittelydokumentti.md  pyproject.toml  tasks.py
Dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  suoritukykytulokset.xlsx  testausdokumentti.md  toteutusdokumentti.md
Dokumentaatio/Viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7.md
Dokumentaatio/vanhat_viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md
src/: index.py  main.py
src/peli/: asd.py  kayttoliittyma.py  peli.py  pelilauta.py  pelimoottori.py
src/tekoaly/: asd.py  heurestiikka.py  heurestiikka_dev.py  heurestiikka_dev2.py  heurestiikka_temp.py  minimax.py
src/testit/: heurestiikka_test.py  minimax_tehokas_test.py  minimax_test.py  minimax_utils_test.py  peli_test.py  pelilaudat.py  pelilauta_test.py  pelimoottori_test.py
