[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["AleksiSaxlund <115921686+AleksiSaxlund@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
